erDiagram
    CHANNELS {
        NUMBER(22) CHANNEL_ID PK
        VARCHAR2(20) CHANNEL_DESC "NOT NULL"
        VARCHAR2(20) CHANNEL_CLASS "NOT NULL"
        NUMBER(22) CHANNEL_CLASS_ID "NOT NULL"
        VARCHAR2(13) CHANNEL_TOTAL "NOT NULL"
        NUMBER(22) CHANNEL_TOTAL_ID "NOT NULL"
    }
    COSTS {
        NUMBER(22) PROD_ID FK
        DATE(7) TIME_ID FK
        NUMBER(22) PROMO_ID FK
        NUMBER(22) CHANNEL_ID FK
        NUMBER(22) UNIT_COST "NOT NULL"
        NUMBER(22) UNIT_PRICE "NOT NULL"
    }
    COUNTRIES {
        NUMBER(22) COUNTRY_ID PK
        CHAR(2) COUNTRY_ISO_CODE "NOT NULL"
        VARCHAR2(40) COUNTRY_NAME "NOT NULL"
        VARCHAR2(30) COUNTRY_SUBREGION "NOT NULL"
        NUMBER(22) COUNTRY_SUBREGION_ID "NOT NULL"
        VARCHAR2(20) COUNTRY_REGION "NOT NULL"
        NUMBER(22) COUNTRY_REGION_ID "NOT NULL"
        VARCHAR2(11) COUNTRY_TOTAL "NOT NULL"
        NUMBER(22) COUNTRY_TOTAL_ID "NOT NULL"
        VARCHAR2(40) COUNTRY_NAME_HIST
    }
    CUSTOMERS {
        NUMBER(22) CUST_ID PK
        VARCHAR2(20) CUST_FIRST_NAME "NOT NULL"
        VARCHAR2(40) CUST_LAST_NAME "NOT NULL"
        CHAR(1) CUST_GENDER "NOT NULL"
        NUMBER(22) CUST_YEAR_OF_BIRTH "NOT NULL"
        VARCHAR2(20) CUST_MARITAL_STATUS
        VARCHAR2(40) CUST_STREET_ADDRESS "NOT NULL"
        VARCHAR2(10) CUST_POSTAL_CODE "NOT NULL"
        VARCHAR2(30) CUST_CITY "NOT NULL"
        NUMBER(22) CUST_CITY_ID "NOT NULL"
        VARCHAR2(40) CUST_STATE_PROVINCE "NOT NULL"
        NUMBER(22) CUST_STATE_PROVINCE_ID "NOT NULL"
        NUMBER(22) COUNTRY_ID FK
        VARCHAR2(25) CUST_MAIN_PHONE_NUMBER "NOT NULL"
        VARCHAR2(30) CUST_INCOME_LEVEL
        NUMBER(22) CUST_CREDIT_LIMIT
        VARCHAR2(50) CUST_EMAIL
        VARCHAR2(14) CUST_TOTAL "NOT NULL"
        NUMBER(22) CUST_TOTAL_ID "NOT NULL"
        NUMBER(22) CUST_SRC_ID
        DATE(7) CUST_EFF_FROM
        DATE(7) CUST_EFF_TO
        VARCHAR2(1) CUST_VALID
    }
    PRODUCTS {
        NUMBER(22) PROD_ID PK
        VARCHAR2(50) PROD_NAME "NOT NULL"
        VARCHAR2(4000) PROD_DESC "NOT NULL"
        VARCHAR2(50) PROD_SUBCATEGORY "NOT NULL"
        NUMBER(22) PROD_SUBCATEGORY_ID "NOT NULL"
        VARCHAR2(2000) PROD_SUBCATEGORY_DESC "NOT NULL"
        VARCHAR2(50) PROD_CATEGORY "NOT NULL"
        NUMBER(22) PROD_CATEGORY_ID "NOT NULL"
        VARCHAR2(2000) PROD_CATEGORY_DESC "NOT NULL"
        NUMBER(22) PROD_WEIGHT_CLASS "NOT NULL"
        VARCHAR2(20) PROD_UNIT_OF_MEASURE
        VARCHAR2(30) PROD_PACK_SIZE "NOT NULL"
        NUMBER(22) SUPPLIER_ID "NOT NULL"
        VARCHAR2(20) PROD_STATUS "NOT NULL"
        NUMBER(22) PROD_LIST_PRICE "NOT NULL"
        NUMBER(22) PROD_MIN_PRICE "NOT NULL"
        VARCHAR2(13) PROD_TOTAL "NOT NULL"
        NUMBER(22) PROD_TOTAL_ID "NOT NULL"
        NUMBER(22) PROD_SRC_ID
        DATE(7) PROD_EFF_FROM
        DATE(7) PROD_EFF_TO
        VARCHAR2(1) PROD_VALID
    }
    PROMOTIONS {
        NUMBER(22) PROMO_ID PK
        VARCHAR2(30) PROMO_NAME "NOT NULL"
        VARCHAR2(30) PROMO_SUBCATEGORY "NOT NULL"
        NUMBER(22) PROMO_SUBCATEGORY_ID "NOT NULL"
        VARCHAR2(30) PROMO_CATEGORY "NOT NULL"
        NUMBER(22) PROMO_CATEGORY_ID "NOT NULL"
        NUMBER(22) PROMO_COST "NOT NULL"
        DATE(7) PROMO_BEGIN_DATE "NOT NULL"
        DATE(7) PROMO_END_DATE "NOT NULL"
        VARCHAR2(15) PROMO_TOTAL "NOT NULL"
        NUMBER(22) PROMO_TOTAL_ID "NOT NULL"
    }
    SALES {
        NUMBER(22) PROD_ID FK
        NUMBER(22) CUST_ID FK
        DATE(7) TIME_ID FK
        NUMBER(22) CHANNEL_ID FK
        NUMBER(22) PROMO_ID FK
        NUMBER(22) QUANTITY_SOLD "NOT NULL"
        NUMBER(22) AMOUNT_SOLD "NOT NULL"
    }
    SUPPLEMENTARY_DEMOGRAPHICS {
        NUMBER(22) CUST_ID PK
        VARCHAR2(21) EDUCATION
        VARCHAR2(21) OCCUPATION
        VARCHAR2(21) HOUSEHOLD_SIZE
        NUMBER(22) YRS_RESIDENCE
        NUMBER(22) AFFINITY_CARD
        NUMBER(22) BULK_PACK_DISKETTES
        NUMBER(22) FLAT_PANEL_MONITOR
        NUMBER(22) HOME_THEATER_PACKAGE
        NUMBER(22) BOOKKEEPING_APPLICATION
        NUMBER(22) PRINTER_SUPPLIES
        NUMBER(22) Y_BOX_GAMES
        NUMBER(22) OS_DOC_SET_KANJI
        VARCHAR2(4000) COMMENTS
    }
    TIMES {
        DATE(7) TIME_ID PK
        VARCHAR2(9) DAY_NAME "NOT NULL"
        NUMBER(22) DAY_NUMBER_IN_WEEK "NOT NULL"
        NUMBER(22) DAY_NUMBER_IN_MONTH "NOT NULL"
        NUMBER(22) CALENDAR_WEEK_NUMBER "NOT NULL"
        NUMBER(22) FISCAL_WEEK_NUMBER "NOT NULL"
        DATE(7) WEEK_ENDING_DAY "NOT NULL"
        NUMBER(22) WEEK_ENDING_DAY_ID "NOT NULL"
        NUMBER(22) CALENDAR_MONTH_NUMBER "NOT NULL"
        NUMBER(22) FISCAL_MONTH_NUMBER "NOT NULL"
        VARCHAR2(8) CALENDAR_MONTH_DESC "NOT NULL"
        NUMBER(22) CALENDAR_MONTH_ID "NOT NULL"
        VARCHAR2(8) FISCAL_MONTH_DESC "NOT NULL"
        NUMBER(22) FISCAL_MONTH_ID "NOT NULL"
        NUMBER(22) DAYS_IN_CAL_MONTH "NOT NULL"
        NUMBER(22) DAYS_IN_FIS_MONTH "NOT NULL"
        DATE(7) END_OF_CAL_MONTH "NOT NULL"
        DATE(7) END_OF_FIS_MONTH "NOT NULL"
        VARCHAR2(9) CALENDAR_MONTH_NAME "NOT NULL"
        VARCHAR2(9) FISCAL_MONTH_NAME "NOT NULL"
        CHAR(7) CALENDAR_QUARTER_DESC "NOT NULL"
        NUMBER(22) CALENDAR_QUARTER_ID "NOT NULL"
        CHAR(7) FISCAL_QUARTER_DESC "NOT NULL"
        NUMBER(22) FISCAL_QUARTER_ID "NOT NULL"
        NUMBER(22) DAYS_IN_CAL_QUARTER "NOT NULL"
        NUMBER(22) DAYS_IN_FIS_QUARTER "NOT NULL"
        DATE(7) END_OF_CAL_QUARTER "NOT NULL"
        DATE(7) END_OF_FIS_QUARTER "NOT NULL"
        NUMBER(22) CALENDAR_QUARTER_NUMBER "NOT NULL"
        NUMBER(22) FISCAL_QUARTER_NUMBER "NOT NULL"
        NUMBER(22) CALENDAR_YEAR "NOT NULL"
        NUMBER(22) CALENDAR_YEAR_ID "NOT NULL"
        NUMBER(22) FISCAL_YEAR "NOT NULL"
        NUMBER(22) FISCAL_YEAR_ID "NOT NULL"
        NUMBER(22) DAYS_IN_CAL_YEAR "NOT NULL"
        NUMBER(22) DAYS_IN_FIS_YEAR "NOT NULL"
        DATE(7) END_OF_CAL_YEAR "NOT NULL"
        DATE(7) END_OF_FIS_YEAR "NOT NULL"
    }
    CHANNELS ||--o{ COSTS : "CHANNEL_ID references CHANNEL_ID"
    PRODUCTS ||--o{ COSTS : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ COSTS : "PROMO_ID references PROMO_ID"
    TIMES ||--o{ COSTS : "TIME_ID references TIME_ID"
    COUNTRIES ||--o{ CUSTOMERS : "COUNTRY_ID references COUNTRY_ID"
    CHANNELS ||--o{ SALES : "CHANNEL_ID references CHANNEL_ID"
    CUSTOMERS ||--o{ SALES : "CUST_ID references CUST_ID"
    PRODUCTS ||--o{ SALES : "PROD_ID references PROD_ID"
    PROMOTIONS ||--o{ SALES : "PROMO_ID references PROMO_ID"
    TIMES ||--o{ SALES : "TIME_ID references TIME_ID"
